--- a/SAM_UI/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
+++ b/SAM_UI/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
@@ -115,7 +115,8 @@
     <Compile Include="Convert\ToSAM\Vector3D.cs" />
     <Compile Include="Convert\ToSAM\Point3D.cs" />
     <Compile Include="Create\VisualBackground.cs" />
-    <Compile Include="Interfaces\IVisualSAMObject.cs" />
+    <Compile Include="Interfaces\IVisualFace3DObject.cs" />
+    <Compile Include="Interfaces\IVisualJSAMObject.cs" />
     <Compile Include="Modify\Clear.cs" />
     <Compile Include="Modify\Zoom.cs" />
     <Compile Include="Modify\Rotate.cs" />
@@ -274,6 +275,9 @@
     <Resource Include="Resources\SAM_Wiki.png" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="HelixToolkit.Wpf">
+      <Version>2.21.0</Version>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.1</Version>
     </PackageReference>
