--- a/SAM_UI/SAM.Analytical.UI/SAM.Analytical.UI.csproj
+++ b/SAM_UI/SAM.Analytical.UI/SAM.Analytical.UI.csproj
@@ -127,6 +127,7 @@
       <DependentUpon>SimulateForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Modify\Check.cs" />
+    <Compile Include="Modify\EditProfile.cs" />
     <Compile Include="Modify\EditWeatherData.cs" />
     <Compile Include="Modify\PrintRoomDataSheets.cs" />
     <Compile Include="Modify\EditProperties.cs" />
