ShowAHU Component Updated

--- a/Grasshopper/SAM.Analytical.UI.Grasshopper/SAM.Analytical.UI.Grasshopper.csproj
+++ b/Grasshopper/SAM.Analytical.UI.Grasshopper/SAM.Analytical.UI.Grasshopper.csproj
@@ -39,12 +39,20 @@
     <Reference Include="SAM.Analytical.Grasshopper">
       <HintPath>..\..\..\SAM\build\SAM.Analytical.Grasshopper.dll</HintPath>
     </Reference>
+    <Reference Include="SAM.Analytical.Mollier, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\SAM_Mollier\build\SAM.Analytical.Mollier.dll</HintPath>
+    </Reference>
     <Reference Include="SAM.Core, Version=1.0.8175.27954, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\SAM\build\SAM.Core.dll</HintPath>
     </Reference>
     <Reference Include="SAM.Core.Grasshopper">
       <HintPath>..\..\..\SAM\build\SAM.Core.Grasshopper.dll</HintPath>
+    </Reference>
+    <Reference Include="SAM.Core.Mollier, Version=1.0.8222.18988, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\SAM_Mollier\build\SAM.Core.Mollier.dll</HintPath>
     </Reference>
     <Reference Include="SAM.Geometry, Version=1.0.8175.27954, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
