--- a/Grasshopper/SAM.Analytical.UI.Grasshopper/SAM.Analytical.UI.Grasshopper.csproj
+++ b/Grasshopper/SAM.Analytical.UI.Grasshopper/SAM.Analytical.UI.Grasshopper.csproj
@@ -84,16 +84,6 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Mollier\SAM.Core.Mollier.UI\SAM.Core.Mollier.UI.csproj">
-      <Project>{086fb5c2-488e-4355-91ce-a91a7c853a44}</Project>
-      <Name>SAM.Core.Mollier.UI</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\SAM_UI\SAM.Analytical.UI\SAM.Analytical.UI.csproj">
-      <Project>{141d9925-a6e1-4390-89c7-251a428e2df0}</Project>
-      <Name>SAM.Analytical.UI</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <PackageReference Include="Grasshopper">
       <Version>6.32.20340.21001</Version>
       <ExcludeAssets>runtime</ExcludeAssets>
@@ -113,6 +103,20 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\SAM_Small.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Mollier\SAM.Analytical.Mollier.UI\SAM.Analytical.Mollier.UI.csproj">
+      <Project>{3f350936-e620-4119-b26f-b60c9d0a77ba}</Project>
+      <Name>SAM.Analytical.Mollier.UI</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Mollier\SAM.Core.Mollier.UI\SAM.Core.Mollier.UI.csproj">
+      <Project>{086fb5c2-488e-4355-91ce-a91a7c853a44}</Project>
+      <Name>SAM.Core.Mollier.UI</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\SAM_UI\SAM.Analytical.UI\SAM.Analytical.UI.csproj">
+      <Project>{141d9925-a6e1-4390-89c7-251a428e2df0}</Project>
+      <Name>SAM.Analytical.UI</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
