--- a/Mollier/SAM.Analytical.Mollier.UI/SAM.Analytical.Mollier.UI.csproj
+++ b/Mollier/SAM.Analytical.Mollier.UI/SAM.Analytical.Mollier.UI.csproj
@@ -101,5 +101,15 @@
   <ItemGroup>
     <Folder Include="Query\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\SAM_UI\SAM.Analytical.UI\SAM.Analytical.UI.csproj">
+      <Project>{141d9925-a6e1-4390-89c7-251a428e2df0}</Project>
+      <Name>SAM.Analytical.UI</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SAM.Core.Mollier.UI\SAM.Core.Mollier.UI.csproj">
+      <Project>{086fb5c2-488e-4355-91ce-a91a7c853a44}</Project>
+      <Name>SAM.Core.Mollier.UI</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
