--- a/Mollier/SAM.Core.Mollier.UI/SAM.Core.Mollier.UI.csproj
+++ b/Mollier/SAM.Core.Mollier.UI/SAM.Core.Mollier.UI.csproj
@@ -69,13 +69,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\BuiltInVisibilitySetting.cs" />
     <Compile Include="Classes\MollierControlSettings.cs" />
+    <Compile Include="Classes\VisibilitySetting.cs" />
+    <Compile Include="Classes\UserVisibilitySetting.cs" />
+    <Compile Include="Classes\VisibilitySettings.cs" />
     <Compile Include="Controls\MollierControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Controls\MollierControl.Designer.cs">
       <DependentUpon>MollierControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Enums\ChartDataType.cs" />
+    <Compile Include="Enums\ChartParameterType.cs" />
     <Compile Include="Forms\MollierForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -94,8 +100,10 @@
     <Compile Include="Forms\MollierControlSettingsForm.Designer.cs">
       <DependentUpon>MollierControlSettingsForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Interface\IVisibilitySetting.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Query\DefaultVisibilitySettings.cs" />
     <EmbeddedResource Include="Controls\MollierControl.resx">
       <DependentUpon>MollierControl.cs</DependentUpon>
     </EmbeddedResource>
